--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
-    "firebase": "^7.3.0",
+    "firebase": "^7.5.0",
     "material-design-icons-iconfont": "^5.0.1",
     "roboto-fontface": "*",
+    "sweetalert2": "^9.4.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-swal": "^1.0.0",
+    "vue-sweetalert2": "^2.1.5",
+    "vuefire": "^2.2.0",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
