--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "cmsapp",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "core-js": "^3.5.0",
-    "cropperjs": "^1.5.6",
-    "filepond": "^4.9.2",
-    "filepond-plugin-file-validate-type": "^1.2.4",
-    "firebase": "^7.6.0",
-    "material-design-icons-iconfont": "^5.0.1",
-    "roboto-fontface": "*",
-    "sweetalert2": "^9.5.3",
-    "uuid": "^3.3.3",
-    "vue": "^2.6.11",
-    "vue-filepond": "^5.1.3",
-    "vue-router": "^3.1.3",
-    "vue-swal": "^1.0.0",
-    "vue-sweetalert2": "^2.1.5",
-    "vuefire": "^2.2.0",
-    "vuelidate": "^0.7.4",
-    "vuetify": "^2.1.14",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.1",
-    "@vue/cli-service": "^4.1.1",
-    "sass": "^1.23.7",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.0.2",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.4.3"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "name": "cmsapp",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "start": "node serve.js"
+    },
+    "dependencies": {
+        "core-js": "^3.5.0",
+        "cropperjs": "^1.5.6",
+        "filepond": "^4.9.2",
+        "filepond-plugin-file-validate-type": "^1.2.4",
+        "firebase": "^7.6.0",
+        "material-design-icons-iconfont": "^5.0.1",
+        "roboto-fontface": "*",
+        "sweetalert2": "^9.5.3",
+        "uuid": "^3.3.3",
+        "vue": "^2.6.11",
+        "vue-filepond": "^5.1.3",
+        "vue-router": "^3.1.3",
+        "vue-swal": "^1.0.0",
+        "vue-sweetalert2": "^2.1.5",
+        "vuefire": "^2.2.0",
+        "vuelidate": "^0.7.4",
+        "vuetify": "^2.1.14",
+        "vuex": "^3.0.1"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^4.1.1",
+        "@vue/cli-service": "^4.1.1",
+        "sass": "^1.23.7",
+        "sass-loader": "^8.0.0",
+        "vue-cli-plugin-vuetify": "^2.0.2",
+        "vue-template-compiler": "^2.6.11",
+        "vuetify-loader": "^1.4.3"
+    },
+    "postcss": {
+        "plugins": {
+            "autoprefixer": {}
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions"
+    ]
 }
