--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.1.1",
         "@vue/cli-service": "^4.1.1",
+        "express": "^4.17.1",
         "sass": "^1.23.7",
         "sass-loader": "^8.0.0",
+        "serve-static": "^1.14.1",
         "vue-cli-plugin-vuetify": "^2.0.2",
         "vue-template-compiler": "^2.6.11",
         "vuetify-loader": "^1.4.3"
