--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
         "vuefire": "^2.2.0",
         "vuelidate": "^0.7.4",
         "vuetify": "^2.1.14",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "express": "^4.17.1",
+        "body-parser": "*"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.1.1",
         "@vue/cli-service": "^4.1.1",
-        "express": "^4.17.1",
         "sass": "^1.23.7",
         "sass-loader": "^8.0.0",
         "serve-static": "^1.14.1",
