--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
         "start": "node serve.js"
     },
     "dependencies": {
+        "body-parser": "*",
         "core-js": "^3.5.0",
         "cropperjs": "^1.5.6",
+        "express": "^4.17.1",
         "filepond": "^4.9.2",
         "filepond-plugin-file-validate-type": "^1.2.4",
         "firebase": "^7.6.0",
         "material-design-icons-iconfont": "^5.0.1",
         "roboto-fontface": "*",
-        "sweetalert2": "^9.5.3",
+        "sweetalert2": "^9.5.4",
         "uuid": "^3.3.3",
         "vue": "^2.6.11",
         "vue-filepond": "^5.1.3",
@@ -26,9 +28,7 @@
         "vuefire": "^2.2.0",
         "vuelidate": "^0.7.4",
         "vuetify": "^2.1.14",
-        "vuex": "^3.0.1",
-        "express": "^4.17.1",
-        "body-parser": "*"
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.1.1",
