Agregar espacio para fecha de (dis)likes en prendas, agregat moment

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
         "body-parser": "*",
         "core-js": "^3.5.0",
         "cropperjs": "^1.5.6",
+        "dateformat": "^3.0.3",
         "express": "^4.17.1",
         "filepond": "^4.9.2",
         "filepond-plugin-file-validate-type": "^1.2.4",
         "firebase": "^7.6.0",
         "material-design-icons-iconfont": "^5.0.1",
+        "moment": "^2.24.0",
         "roboto-fontface": "*",
         "sweetalert2": "^9.5.4",
         "uuid": "^3.3.3",
