manejo de inventario y generacion de pdfs

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "filepond": "^4.9.2",
         "filepond-plugin-file-validate-type": "^1.2.4",
         "firebase": "^7.6.0",
+        "jspdf": "^1.5.3",
         "material-design-icons-iconfont": "^5.0.1",
         "moment": "^2.24.0",
         "roboto-fontface": "*",
